// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLink renders the button in the large size 1`] = `
<div>
  <a
    class="button button-lg "
    href="#"
  >
    button
  </a>
</div>
`;

exports[`ButtonLink renders the button in the medium size 1`] = `
<div>
  <a
    class="button button-md "
    href="#"
  >
    button
  </a>
</div>
`;

exports[`ButtonLink renders the button in the small size 1`] = `
<div>
  <a
    class="button button-sm "
    href="#"
  >
    button
  </a>
</div>
`;
